--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <main class="flex-row justify-space-between">
 
-  </main>
-
+  </main> 
+  <script src="./assets/js/homepage.js"></script>
 </body>
 
 </html>
