--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 
 
   <main class="flex-row justify-space-between">
+    <!-- Search Form -->
+    <div class="col-12 col-md-4">
+      <div class="card">
+        <h3 class="card-header text-uppercase"> Search by User </h3>
+        <form id="user-form" class="card-body">
+          <label class="form-label" for="username">Username</label>
+          <input name = "username" type="text" id="username" autofocus="true" class="form-input">
+          <button type="submit" class="btn">Get User</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Display Repos -->
+    <div class="col-12 col-md-8">
+      <h2 class="subtitle">Showing Repos for: <span id="repo-search-term"></span></h2>
+      <div id="repos-container" class="list-group">
+        <!-- Repos will be displayed here -->
+      </div>
+    </div>
 
   </main> 
   <script src="./assets/js/homepage.js"></script>
