error message will also display!

--- a/single-repo.html
+++ b/single-repo.html
@@ -23,7 +23,11 @@
   
   <main>
     <div id="issues-container" class="list-group">
+      <!-- Issues will go here -->
+    </div>
 
+    <div id="limit-warning">
+      
     </div>
   </main>
   <script src="./assets/js/single.js"></script>
